添加小程序appid配置。

--- a/template/project.config.json
+++ b/template/project.config.json
@@ -9,7 +9,7 @@
   },
   "miniprogramRoot": "./dist/",
   "compileType": "miniprogram",
-  "appid": "",
+  "appid": "{{appid}}",
   "projectname": "MPVueTemplate",
   "condition": {
     "search": {
