修正项目名称配置。

--- a/template/project.config.json
+++ b/template/project.config.json
@@ -10,7 +10,7 @@
   "miniprogramRoot": "./dist/",
   "compileType": "miniprogram",
   "appid": "{{appid}}",
-  "projectname": "MPVueTemplate",
+  "projectname": "{{name}}",
   "condition": {
     "search": {
       "current": -1,
