--- a/template/package.json
+++ b/template/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "{{description}}",
   "author": "{{author}}",
+  "cdn": "//static.ws.126.net/163/activity",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -22,11 +23,11 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
+    "easeftp": "^2.0.40",
     "eslint-plugin-html": "^4.0.5",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "gulp": "^4.0.0",
-    "gulp-tinypng-plugin": "^1.0.7",
     "mpvue-entry": "^1.4.4",
     "mpvue-loader": "^1.0.13",
     "mpvue-template-compiler": "^1.0.11",
@@ -38,6 +39,8 @@
     "postcss-plugin-px2rem": "^0.7.0",
     "standardx": "^2.1.0",
     "style-loader": "^0.21.0",
+    "tinify-loader": "^0.2.4",
+    "url-loader": "^1.0.1",
     "webpack": "^3.12.0",
     "webpack-dev-middleware-hard-disk": "^1.12.1",
     "webpack-merge": "^4.1.3"
