--- a/template/package.json
+++ b/template/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "{{description}}",
   "author": "{{author}}",
-  "cdn": "//static.ws.126.net/163/activity",
+  "cdn": "https://static.ws.126.net/163/activity",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
