--- a/template/package.json
+++ b/template/package.json
@@ -5,8 +5,8 @@
   "author": "{{author}}",
   "cdn": "https://static.ws.126.net/163/activity",
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "dev": "cross-env NODE_ENV=development node build/dev-server.js",
+    "build": "cross-env NODE_ENV=production node build/build.js",
     "standard": "standardx 'src/**/*.{js,vue}' --fix"
   },
   "dependencies": {
@@ -16,34 +16,36 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^0.28.11",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "easeftp": "^2.0.40",
     "eslint-plugin-html": "^4.0.5",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "mpvue-entry": "^1.4.4",
-    "mpvue-loader": "^1.0.13",
+    "file-loader": "^2.0.0",
+    "mpvue-entry": "^1.5.2",
+    "mpvue-loader": "^1.1.4",
     "mpvue-template-compiler": "^1.0.11",
     "mpvue-webpack-target": "^1.0.0",
-    "postcss": "^6.0.23",
+    "postcss": "^7.0.2",
     "postcss-cssnext": "^3.1.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^3.0.0",
     "postcss-mpvue-wxss": "^1.0.0",
     "postcss-plugin-px2rem": "^0.7.0",
-    "standardx": "^2.1.0",
-    "style-loader": "^0.21.0",
+    "standardx": "^3.0.1",
+    "style-loader": "^0.23.0",
     "tinify-loader": "^0.2.4",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.1",
     "webpack": "^3.12.0",
     "webpack-dev-middleware-hard-disk": "^1.12.1",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.4",
+    "webpack-mpvue-asset-plugin": "^0.1.1"
   },
   "browserslist": [
     "> 1%",
